some edits in reflexion

--- a/patterns/reflexion.ipynb
+++ b/patterns/reflexion.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,18 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "__main__ | L:10 | Invoking main_agent\n"
+     ]
+    }
+   ],
    "source": [
-    "import boto3\n",
-    "from langchain_community.chat_models import BedrockChat\n",
-    "from langchain.agents import AgentExecutor\n",
-    "from langchain.agents.format_scratchpad import format_log_to_str\n",
-    "from langchain.agents.output_parsers import ReActSingleInputOutputParser\n",
-    "from langchain.memory import ConversationBufferMemory\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_core.messages import get_buffer_string\n",
     "from utils.reflextion_agent import *\n",
     "\n",
     "import logging\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,19 +183,11 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mQuestion: What is represented on the cover art of the studio album that includes the song \"Speed of Sound\"?\n",
-      "Thought: The question is asking about the cover art of a specific album that contains the song \"Speed of Sound\". To answer this, I will need to identify the album and look up information about its cover art.\n",
+      "\u001b[32;1m\u001b[1;3mQuestion: The head of the Foreign Relations Department of the Rastriya Janashakti Party holds a degree that can be abbreviated MS, M.S., or ScM, in what field?\n",
+      "Thought: To answer this question, I will need to find information about the head of the Foreign Relations Department of the Rastriya Janashakti Party and their educational background.\n",
       "Action: search-wikipedia\n",
-      "Action Input: \"Speed of Sound\" song\u001b[0m\u001b[33;1m\u001b[1;3mPage: Speed of Sound (song)\n",
-      "Summary: \"Speed of Sound\" is a song by British rock band Coldplay. It was written by all members of the band for their third studio album, X&Y (2005). Constructed around a piano and guitar riff, the song builds into a huge, synthesiser-heavy chorus. It was released by Parlophone Records as the lead single from the album. \"Speed of Sound\" made its radio premiere on BBC Radio 1 with Lamacq on 19 April, then was serviced to US radio on 18 April 2005. The song was released physically in Japan on 11 May with two B-sides: \"Things I Don't Understand\" and \"Proof\". In the United Kingdom, the single was issued on 23 May 2005.\n",
-      "Coldplay vocalist Chris Martin admitted that the song was developed after the band had listened to English art rock singer Kate Bush. Upon the song's release, it charted in the UK Singles Chart in the number two position. In the United States, it debuted at number eight on the Billboard Hot 100, their first top ten hit in the country, and their most successful song until \"Viva la Vida\" reached number one in 2008.\n",
-      "\"Speed of Sound\" was recognised Song of the Year by the American Society of Composers, Authors and Publishers (ASCAP) and it was nominated twice at the 48th Grammy Awards. The song won a Brit Award in the category for Best British Single in 2006. The track's music video was nominated for four MTV Video Music Awards. \"Speed of Sound\" was also notable as the billionth download from the iTunes Store.\u001b[0m\u001b[32;1m\u001b[1;3mThought: The Wikipedia page provides helpful information about the song \"Speed of Sound\" by Coldplay, including that it was the lead single from their 2005 album X&Y. However, it does not directly answer what is depicted on the album cover art. To find that information, I should search more specifically about the X&Y album cover.\n",
-      "\n",
-      "Action: search-wikipedia\n",
-      "Action Input: \"X&Y album cover art\"\n",
-      "\u001b[0m\u001b[33;1m\u001b[1;3mPage: X&Y\n",
-      "Summary: X&Y is the third studio album by British rock band Coldplay. It was released on 6 June 2005 by Parlophone in the United Kingdom, and a day later by Capitol Records in the United States. The album was produced by Coldplay and producer Danton Supple. It is noted for its troubled and urgent development, as well as manager and creative director Phil Harvey's brief departure from the band. Producer Ken Nelson was originally tasked with producing the record; however, many songs written during his sessions were discarded due to the band's dissatisfaction with them. The album's cover art combines colours and blocks to represent the title in Baudot code.\n",
-      "The album contains twelve tracks and an additional hidden song, \"Til Kingdom Come\", which is listed as \"+\" on the disc label and inside the record's booklet. It was originally planned for American country star Johnny Cash to record it with lead singer Chris Martin, but Cash died before he was able to do so. The song \"Talk\" appeared in the track listing, although after it leaked online in early 2005, it was thought to have been downgraded to a B-side for the album's subsequent single releases.X&Y was released after a considerable amount of global anticipation. Overall reaction to the album was generally positive. Furthermore, it was a significant commercial success, reaching the number-one position in the charts of 32 countries around the world, including the United Kingdom (where it had the third biggest sales week in history at the time) and the United States (where it became Coldplay's first album to top the Billboard 200 chart). With 8.3 million copies sold worldwide, X&Y was the best-selling album of 2005, accumulating over 13 million units as of December 2012. It spawned the singles \"Speed of Sound\", \"Fix You\", \"Talk\" and \"The Hardest Part\".\u001b[0m"
+      "Action Input: \"Rastriya Janashakti Party\" \"Foreign Relations Department\"\u001b[0m\u001b[33;1m\u001b[1;3mPage: Hari Bahadur Basnet\n",
+      "Summary: Hari Bahadur Basnet is a Nepalese politician. He is the head of the Foreign Relations Department of the Rastriya Janashakti Party. Basnet holds a M.Sc. in Engineering.Basnet entered politics in 1970. Three times he was elected to the Rastriya Panchayat. He joined the Rastriya Prajatantra Party when it was formed, and became a Central Committee member of the party. He also headed the International Relations department of RPP.In 2003, he was appointed Minister of Law, Justice and Parliamentary Affairs, Education and Sports, Industry, Commerce, and Supplies in the cabinet of Surya Bahadur Thapa.\u001b[0m"
      ]
     },
     {
@@ -209,19 +201,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;1m\u001b[1;3mThought: The Wikipedia page for the X&Y album provides the key information needed to answer the question. It states that the album cover art \"combines colours and blocks to represent the title in Baudot code.\"\n",
+      "\u001b[32;1m\u001b[1;3mBased on the information from Wikipedia, the head of the Foreign Relations Department of the Rastriya Janashakti Party, Hari Bahadur Basnet, holds a M.Sc. degree in Engineering.\n",
       "\n",
-      "Final Answer: The cover art of Coldplay's 2005 album X&Y, which includes the song \"Speed of Sound\", represents the album title in Baudot code using colors and blocks.\u001b[0m\n",
+      "Final Answer: Hari Bahadur Basnet, the head of the Foreign Relations Department of the Rastriya Janashakti Party, holds a Master of Science (M.Sc.) degree in Engineering.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mThought: I need more information to verify the reference answer.\n",
+      "\u001b[32;1m\u001b[1;3mThought: I need to verify the reference answer.\n",
       "Action: wikipedia\n",
-      "Action Input: Coldplay X&Y album cover\u001b[0m\u001b[36;1m\u001b[1;3mPage: X&Y\n",
-      "Summary: X&Y is the third studio album by British rock band Coldplay. It was released on 6 June 2005 by Parlophone in the United Kingdom, and a day later by Capitol Records in the United States. The album was produced by Coldplay and producer Danton Supple. It is noted for its troubled and urgent development, as well as manager and creative director Phil Harvey's brief departure from the band. Producer Ken Nelson was originally tasked with producing the record; however, many songs written during his sessions were discarded due to the band's dissatisfaction with them. The album's cover art combines colours and blocks to represent the title in Baudot code.\n",
-      "The album contains twelve tracks and an additional hidden song, \"Til Kingdom Come\", which is listed as \"+\" on the disc label and inside the record's booklet. It was originally planned for American country star Johnny Cash to record it with lead singer Chris Martin, but Cash died before he was able to do so. The song \"Talk\" appeared in the track listing, although after it leaked online in early 2005, it was thought to have been downgraded to a B-side for the album's subsequent single releases.X&Y was released after a considerable amount of global anticipation. Overall reaction to the album was generally positive. Furthermore, it was a significant commercial success, reaching the number-one position in the charts of 32 countries around the world, including the United Kingdom (where it had the third biggest sales week in history at the time) and the United States (where it became Coldplay's first album to top the Billboard 200 chart). With 8.3 million copies sold worldwide, X&Y was the best-selling album of 2005, accumulating over 13 million units as of December 2012. It spawned the singles \"Speed of Sound\", \"Fix You\", \"Talk\" and \"The Hardest Part\".\u001b[0m"
+      "Action Input: Hari Bahadur Basnet\u001b[0m\u001b[36;1m\u001b[1;3mPage: Hari Bahadur Basnet\n",
+      "Summary: Hari Bahadur Basnet is a Nepalese politician. He is the head of the Foreign Relations Department of the Rastriya Janashakti Party. Basnet holds a M.Sc. in Engineering.Basnet entered politics in 1970. Three times he was elected to the Rastriya Panchayat. He joined the Rastriya Prajatantra Party when it was formed, and became a Central Committee member of the party. He also headed the International Relations department of RPP.In 2003, he was appointed Minister of Law, Justice and Parliamentary Affairs, Education and Sports, Industry, Commerce, and Supplies in the cabinet of Surya Bahadur Thapa.\u001b[0m"
      ]
     },
     {
@@ -229,8 +220,8 @@
      "output_type": "stream",
      "text": [
       "__main__ | L:29 | evaluator_result_output: 1\n",
-      "__main__ | L:30 | main_agent_final_answer: The cover art of Coldplay's 2005 album X&Y, which includes the song \"Speed of Sound\", represents the album title in Baudot code using colors and blocks.\n",
-      "__main__ | L:52 | after while loop exit, main_agent_final_answer: The cover art of Coldplay's 2005 album X&Y, which includes the song \"Speed of Sound\", represents the album title in Baudot code using colors and blocks.\n"
+      "__main__ | L:30 | main_agent_final_answer: Hari Bahadur Basnet, the head of the Foreign Relations Department of the Rastriya Janashakti Party, holds a Master of Science (M.Sc.) degree in Engineering.\n",
+      "__main__ | L:52 | after while loop exit, main_agent_final_answer: Hari Bahadur Basnet, the head of the Foreign Relations Department of the Rastriya Janashakti Party, holds a Master of Science (M.Sc.) degree in Engineering.\n"
      ]
     },
     {
@@ -246,7 +237,7 @@
    "source": [
     "# question = \"Which character does this protagonist, who secretly loves and marries a member of the rival house, of William Shakespeare's tragedy that has a fictional character Benvolio slay?\",\n",
     "# question = \"\"\"The creator of \"Wallace and Gromit\" also created what animation comedy that matched animated zoo animals with a soundtrack of people talking about their homes?\"\"\"\n",
-    "# question = \"The head of the Foreign Relations Department of the Rastriya Janashakti Party holds a degree that can be abbreviated MS, M.S., or ScM, in what field?\"\n",
+    "question = \"The head of the Foreign Relations Department of the Rastriya Janashakti Party holds a degree that can be abbreviated MS, M.S., or ScM, in what field?\"\n",
     "# question = \"\"\"What is represented on the cover art of the studio album that includes the song \"Speed of Sound\"?\"\"\"\n",
     "\n",
     "\n",
@@ -299,13 +290,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reflections"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# TODO:\n",
-    "- try examples that need atleast 6-7 trials\n",
+    "- try examples that need atleast 6-7 trials - GSM8K dataset - https://paperswithcode.com/dataset/gsm8k\n",
     "- reflections to be in react style instead of simple paragraph\n",
-    "- evaluation can be improved"
+    "- evaluation can be improved - heuristics or different llm\n",
+    "- tools can be expanded\n",
+    "- way to eval \n",
+    "- compare cot, react"
    ]
   }
  ],
