about to start pattern: adapt

--- a/patterns/plan-and-solve.ipynb
+++ b/patterns/plan-and-solve.ipynb
@@ -912,9 +912,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# TODO: will try later"
+   ]
   }
  ],
  "metadata": {
